--- a/.github/workflows/publish-release.yml
+++ b/.github/workflows/publish-release.yml
@@ -20,5 +20,6 @@ jobs:
 
       - name: Publish artifact
         env:
-          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+          BINTRAY_USER: octylfractal
+          BINTRAY_KEY: ${{ secrets.BINTRAY_KEY }}
         run: ./gradlew build publish
