--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -1,5 +1,10 @@
 name: Gradle Build
-on: [ push, pull_request ]
+on:
+  push:
+    branches:
+      - *
+  pull_request:
+    types: [opened, reopened, synchronize]
 
 jobs:
   build:
